--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@types/react": "^17.0.32",
+    "@types/react-dom": "^17.0.10",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.4.0",
+    "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.3",
     "postcss": "^8.3.11",
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
+    "sass": "^1.43.3",
+    "sass-loader": "^12.2.0",
     "scss": "^0.2.4",
-    "scss-loader": "^0.0.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.60.0",
@@ -33,6 +37,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0",
+    "react-icons": "^4.3.1"
   }
 }
