--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": "true",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --hot",
     "watch": "wepback --watch",
     "build": "SET NODE_ENV=production& webpack",
     "build-dev": "webpack"
@@ -17,28 +17,31 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/react": "^17.0.32",
-    "@types/react-dom": "^17.0.10",
+    "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.4.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.3",
     "postcss": "^8.3.11",
     "postcss-loader": "^6.2.0",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "^7.8.0",
+    "react-refresh": "^0.14.0",
     "sass": "^1.43.3",
     "sass-loader": "^12.2.0",
     "scss": "^0.2.4",
     "ts-loader": "^9.2.6",
+    "type-fest": "^2.19.0",
     "typescript": "^4.4.4",
-    "webpack": "^5.60.0",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0",
-    "react-icons": "^4.3.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.3.1",
+    "react-refresh-webpack-plugin": "^0.1.0"
   }
 }
