--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack serve --hot",
     "watch": "wepback --watch",
     "build": "SET NODE_ENV=production& webpack",
-    "build-dev": "webpack"
+    "prod": "webpack serve --mode production"
   },
   "keywords": [],
   "author": "",
